test/tests/operators/strict.txt
error: assertion failure
 --> tests/operators/strict.tql:6:17
  |
6 | strict { assert false }
  |                 ^^^^^ 
  |
